--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Xplant Laboratory</title>
-    <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Irish+Grover&family=Kadwa:wght@700&family=Koulen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Irish+Grover&family=Kadwa:wght@400;700&family=Koulen&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
