--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Xplant Laboratory</title>
+    <title>Grapes - Xplant Laboratory</title>
     <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Irish+Grover&family=Kadwa:wght@400;700&family=Koulen&display=swap" rel="stylesheet">
   </head>
   <body>
